Update build.sh